# py-metadata

./: .gitignore  .pylintrc  .python-version  .readthedocs.yaml  Makefile  README.md  ansible.cfg  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py  text.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  e2e-suite-pr.yml  e2e-suite.yml  lint.yml  publish-pypi.yml  unit-tests.yml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/linode_metadata/: metadata_client.doctree
docs/_build/doctrees/linode_metadata/objects/: instance.doctree  networking.doctree  ssh_keys.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/linode_metadata/: metadata_client.rst.txt
docs/_build/html/_sources/linode_metadata/objects/: networking.rst.txt
docs/_build/html/linode_metadata/: metadata_client.html
docs/_build/html/linode_metadata/objects/: instance.html  networking.html  ssh_keys.html
docs/linode_metadata/: metadata_client.rst  watcher.rst
docs/linode_metadata/objects/: error.rst  instance.rst  networking.rst  ssh_keys.rst  token.rst
hack/: .gitignore  harden.yaml.j2  run-e2e.yml  run-int-test.yml
linode_metadata/: __init__.py  constants.py  metadata_client.py  version.py  watcher.py
linode_metadata/objects/: __init__.py  error.py  instance.py  networking.py  response_base.py  ssh_keys.py  token.py
metadata/: __init__.py  metadata_client.py
metadata/objects/: instance.py  networking.py  ssh_keys.py
test/: Makefile
test/integration/: conftest.py  helpers.py  test_instance.py  test_network.py  test_ssh.py  test_token.py  test_watcher.py
test/unit/objects/: test_instance.py  test_networking.py  test_ssh_keys.py  test_token.py
