[tool.pylint.main]
py-version = "3.8"
disable = ["raw-checker-failed", "bad-inline-option", "locally-disabled", "file-ignored", "suppressed-message", "useless-suppression", "deprecated-pragma", "use-symbolic-message-instead", "exec-used", "too-many-branches", "too-few-public-methods", "unspecified-encoding", "consider-using-f-string", "too-many-instance-attributes", "broad-exception-raised"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
line_length = 80

[tool.black]
line-length = 80
target-version = ["py38", "py39", "py310", "py311"]

[tool.autoflake]
expand-star-imports = false
ignore-init-module-imports = true
ignore-pass-after-docstring = true
in-place = true
recursive = true
remove-all-unused-imports = false
remove-duplicate-keys = false