[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "linode_metadata"
authors = [{ name = "Linode", email = "developers@linode.com" }]
description = "A client to interact with the Linode Metadata service in Python."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["httpx"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "pylint",
    "autoflake",
    "Sphinx>=7.2.6",
    "pytest-asyncio",
    "sphinx-lint",
]

doc = ["Sphinx>=7.2.6"]

[project.urls]
homepage = "https://github.com/linode/py-metadata"
repository = "https://github.com/linode/py-metadata.git"

[tool.setuptools.dynamic]
version = { attr = "linode_metadata.version.__version__" }

[tool.setuptools.packages.find]
include = ["linode_metadata*"]

[tool.isort]
profile = "black"
line_length = 80

[tool.black]
line-length = 80
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.autoflake]
expand-star-imports = true
ignore-init-module-imports = true
ignore-pass-after-docstring = true
in-place = true
recursive = true
remove-all-unused-imports = true
remove-duplicate-keys = true

[tool.pylint]
disable = [
    "bare-except",
    "cyclic-import",
    "too-many-arguments",
    "too-many-instance-attributes",
]
max-positional-arguments = 10
